# face_enhancer

./: .gitignore  Dockerfile  README.md  app.py  docker-compose.yml  pyproject.toml  requirements.txt  start.sh
core/: app_context.py  choices.py  curl_builder.py  download.py  execution.py  face_analyser.py  face_classifier.py  face_detector.py  face_helper.py  face_landmarker.py  face_masker.py  face_recognizer.py  face_selector.py  face_store.py  filesystem.py  hash_helper.py  inference_manager.py  logger.py  state_manager.py  thread_helper.py  types.py  vision.py
core/processors/: types.py
core/processors/modules/face_enhancer/: choices.py  core.py  locals.py  types.py
face_enhancer/: __init__.py  app.py
face_enhancer/core/: app_context.py  choices.py  curl_builder.py  download.py  execution.py  face_analyser.py  face_classifier.py  face_detector.py  face_helper.py  face_landmarker.py  face_masker.py  face_recognizer.py  face_selector.py  face_store.py  filesystem.py  hash_helper.py  inference_manager.py  logger.py  metadata.py  state_manager.py  thread_helper.py  vision.py
face_enhancer/core/processors/: types.py
face_enhancer/core/processors/modules/face_enhancer/: choices.py  core.py  locals.py  types.py
face_enhancer/static/: demo.html
