[project]
name = "face-enhancer-service"
version = "0.1.0"
description = "FastAPI wrapper around FaceFusion face_enhancer + selector"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.24.0",
    "numpy>=1.24.0",
    "opencv-python-headless>=4.8.0",
    "onnxruntime>=1.15.0",
    "pillow>=10.2.0",
    "onnx>=1.19.1",
    "psutil>=5.9.0",
    "scipy>=1.10.0",
    "tqdm>=4.67.1"
]

[project.optional-dependencies]
dev = [
    "httpx>=0.27.0",
    "pytest>=7.4.0"
]

[build-system]
requires = ["setuptools>=62"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["face_enhancer*"]

[tool.setuptools.package-data]
face_enhancer = ["static/*.html"]
